# yolo-ffmpeg-mcp

./: .env.example  .env.local  .eslintrc.json  .firebaserc  .gitignore  AGENT_WORKFLOW_USAGE.md  AI_OVER_ENGINEERING_RESTRAINT_RESEARCH.md  ANALYTICS_SERVICE_DESIGN.md  CI_CD_SETUP.md  CLAUDE.md  CLAUDE_CODE_WORKFLOW.md  DEVELOPMENT.md  DOCKER_IMAGES_USED.md  DOWNLOAD_SYSTEM_FAILURE_REPORT.md  Dockerfile  Dockerfile.base  Dockerfile.base.optimized  Dockerfile.ci  ELM_TESTING_IMPLEMENTATION.md  END_TO_END_TEST_PLAN.md  FASTTRACK_SUBAGENT_COMPLETE.md  FASTTRACK_VS_BUILD_DETECTIVE_COMPARISON.md  FINAL_MCP_COMPARISON_REPORT.json  FIREBASE_SETUP_GUIDE.md  GPT5_AIDER_INTEGRATION_GUIDE.md  IMPROVEMENT_EVALUATION.md  INTEGRATION_ROADMAP.md  KOMPOSTEUR_INTEGRATION_REQUEST.md  KOMPOSTEUR_ISSUES_FOR_CLAUDE.md  LANDSCAPE_VIDEO_SOLUTION.md  MCP_KOMPOST_VIDEO_EVALUATION.md  MCP_REGISTRY_AND_CACHING_SYSTEM.md  MCP_SERVER_HAIKU_IMPROVEMENTS.md  MUSIC_VIDEO_CREATION_EXPERIENCE_REPORT.md  Makefile  MultiSourceDownloadBridge.java  NATURAL_LANGUAGE_MUSIC_VIDEO_DEMO.md  PRIORITY_IMPLEMENTATION_COMPLETE.md  PR_INFO.md  README.md  (+95 more)
config/: haiku_integration.env.example  requirements-haiku.txt  requirements-youtube.txt
coverage/: clover.xml  coverage-final.json  lcov.info
docker/: Dockerfile  Dockerfile.base  Dockerfile.base.optimized  Dockerfile.haiku-minimal  Dockerfile.haiku-test  Dockerfile.optimized  Dockerfile.ubuntu-base  Dockerfile.ubuntu-single-stage
docs/: 01-scope.md  02-decisions.md  03-tasks.md  80BPM_MUSIC_VIDEO_CI_TEST.md  CI_ANALYZER_EFFECTIVENESS_EVALUATION.md  CI_ANALYZER_IMPROVEMENT_RECOMMENDATIONS.md  CONTAINERIZED_FFMPEG_ARCHITECTURE.md  FASTTRACK_COMPLETE_GUIDE.md  FASTTRACK_LEARNING_SESSION_20250825.md  FASTTRACK_QUICK_REFERENCE.md  HAIKU_MCP_ARCHITECTURE.md  INCREMENTAL_FIX_WORKFLOW.md  INTEGRATION_GUIDE.md  KOMPOSTEUR_FILTER_IMPLEMENTATION_PROPOSAL.md  README.md  STANDARDIZED_FILTER_FORMAT_PROPOSAL.md  STATE_RECOVERY_FASTTRACK.md  YOLO_MASTER_AGENT_ARCHITECTURE.md  bd_maven_parsing_guide.md  blueprint.md
documents/: BD_LOCAL_CI_IMPLEMENTATION.md  KOMPOSTEUR_MCP_INTEGRATION_COMPLETE_SPECIFICATION.md  TRANSITION_EFFECTS_RESEARCH_REPORT.md  claude_code_workflow.txt  frame_loss_detection_and_prevention.md  haiku_yolo_improvements.md
examples/: ft_enhanced_integration_demo.py  haiku_integration_demo.py
haiku-integration/: README.md  requirements.txt
haiku-mcp-ts/: .gitignore  README.md  (+12 more)
(+452 files in other folders)
