[project]
name = "yolo-ffmpeg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.7.1",
    "mcp>=1.9.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.0",
    "scenedetect>=0.6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
komposteur = [
    "py4j>=0.10.9.7",  # Python-Java gateway for Komposteur integration
    # Alternative: "jpype1>=1.4.1" if py4j has issues
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.2",
]
