[project]
name = "yolo-ffmpeg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "docker>=7.1.0",
    "fastmcp>=2.7.1",
    "mcp>=1.9.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.5",
    "pymediainfo>=7.0.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.0",
    "scenedetect>=0.6.6",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "jsonschema>=4.0.0",
    "anthropic>=0.32.0",
    "google-generativeai>=0.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0", 
    "jsonschema>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--ignore=archive --ignore=komposteur-repo --ignore=temp-komposteur-analysis --ignore=tests/integration --ignore=tests/ci --ignore=tests/registry --ignore=tests/haiku --ignore=tests/llm-validation"
